--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body
         {
-            background-image:url('/res/bg.png');
+            background-image:url('bg.png');
             background-repeat:no-repeat;
         }
         .main {
